Update Maven test command with additional argument